// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab matches snapshot when "frontend" prop is true 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-tab tab"
        role="tab"
        tabindex="0"
      >
        <span
          class="mdc-tab__content"
        >
          <span
            class="mdc-tab__text-label tab__label-field"
          >
            <span
              role="tab"
              tabindex="0"
            >
              Test Tab
            </span>
          </span>
        </span>
        <span
          class="mdc-tab-indicator"
        >
          <span
            class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
          />
        </span>
        <span
          class="mdc-tab__ripple"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-tab tab"
      role="tab"
      tabindex="0"
    >
      <span
        class="mdc-tab__content"
      >
        <span
          class="mdc-tab__text-label tab__label-field"
        >
          <span
            role="tab"
            tabindex="0"
          >
            Test Tab
          </span>
        </span>
      </span>
      <span
        class="mdc-tab-indicator"
      >
        <span
          class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
        />
      </span>
      <span
        class="mdc-tab__ripple"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tab matches snapshot when "iconPosition" prop is above 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-tab tab"
        role="tab"
        tabindex="0"
      >
        <span
          class="mdc-tab__content"
        >
          <span
            class="mdc-tab__text-label tab__label-field"
          >
            <span
              aria-label="Tab Title"
              aria-multiline="true"
              class="rich-text block-editor-rich-text__editable"
              contenteditable="true"
              role="textbox"
              style="white-space: pre-wrap;"
            >
              Test Tab
            </span>
          </span>
        </span>
        <span
          class="mdc-tab-indicator"
        >
          <span
            class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
          />
        </span>
        <span
          class="mdc-tab__ripple"
        />
        <button
          class="material-icons tab__delete"
        >
          cancel
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-tab tab"
      role="tab"
      tabindex="0"
    >
      <span
        class="mdc-tab__content"
      >
        <span
          class="mdc-tab__text-label tab__label-field"
        >
          <span
            aria-label="Tab Title"
            aria-multiline="true"
            class="rich-text block-editor-rich-text__editable"
            contenteditable="true"
            role="textbox"
            style="white-space: pre-wrap;"
          >
            Test Tab
          </span>
        </span>
      </span>
      <span
        class="mdc-tab-indicator"
      >
        <span
          class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
        />
      </span>
      <span
        class="mdc-tab__ripple"
      />
      <button
        class="material-icons tab__delete"
      >
        cancel
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tab matches snapshot when "iconPosition" prop is leading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-tab tab"
        role="tab"
        tabindex="0"
      >
        <span
          class="mdc-tab__content"
        >
          <span
            class="mdc-tab__text-label tab__label-field"
          >
            <span
              aria-label="Tab Title"
              aria-multiline="true"
              class="rich-text block-editor-rich-text__editable"
              contenteditable="true"
              role="textbox"
              style="white-space: pre-wrap;"
            >
              Test Tab
            </span>
          </span>
        </span>
        <span
          class="mdc-tab-indicator"
        >
          <span
            class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
          />
        </span>
        <span
          class="mdc-tab__ripple"
        />
        <button
          class="material-icons tab__delete"
        >
          cancel
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-tab tab"
      role="tab"
      tabindex="0"
    >
      <span
        class="mdc-tab__content"
      >
        <span
          class="mdc-tab__text-label tab__label-field"
        >
          <span
            aria-label="Tab Title"
            aria-multiline="true"
            class="rich-text block-editor-rich-text__editable"
            contenteditable="true"
            role="textbox"
            style="white-space: pre-wrap;"
          >
            Test Tab
          </span>
        </span>
      </span>
      <span
        class="mdc-tab-indicator"
      >
        <span
          class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
        />
      </span>
      <span
        class="mdc-tab__ripple"
      />
      <button
        class="material-icons tab__delete"
      >
        cancel
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tab matches snapshot with base props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-tab tab"
        role="tab"
        tabindex="0"
      >
        <span
          class="mdc-tab__content"
        >
          <span
            class="mdc-tab__text-label tab__label-field"
          >
            <span
              aria-label="Tab Title"
              aria-multiline="true"
              class="rich-text block-editor-rich-text__editable"
              contenteditable="true"
              role="textbox"
              style="white-space: pre-wrap;"
            >
              Test Tab
            </span>
          </span>
        </span>
        <span
          class="mdc-tab-indicator"
        >
          <span
            class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
          />
        </span>
        <span
          class="mdc-tab__ripple"
        />
        <button
          class="material-icons tab__delete"
        >
          cancel
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-tab tab"
      role="tab"
      tabindex="0"
    >
      <span
        class="mdc-tab__content"
      >
        <span
          class="mdc-tab__text-label tab__label-field"
        >
          <span
            aria-label="Tab Title"
            aria-multiline="true"
            class="rich-text block-editor-rich-text__editable"
            contenteditable="true"
            role="textbox"
            style="white-space: pre-wrap;"
          >
            Test Tab
          </span>
        </span>
      </span>
      <span
        class="mdc-tab-indicator"
      >
        <span
          class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
        />
      </span>
      <span
        class="mdc-tab__ripple"
      />
      <button
        class="material-icons tab__delete"
      >
        cancel
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
